fixing spacing issue on mobile

--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -63,9 +63,11 @@
 
 @media (max-width: 768px){
   #keyboard{
-    max-width: calc(500px - 20px);
-    width: 100%;
+    /* max-width: calc(500px - 20px);
+    width: 100%; */
     padding-left: 10px;
     padding-right: 10px;
+    width: 100%;
+    margin: unset;
   }
 }
